--- a/style.css
+++ b/style.css
@@ -127,6 +127,53 @@
     background-color: black;
   }
 
+  /*seccion 1*/
+
+  .Home {
+    background: orange;
+    display: grid;
+  }
+
+  .home-container {
+    padding: 0.1;
+  }
+
+  .home-container h1 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 2rem;
+    text-align: center;
+  }
+
+  .home-container p {
+    font-size: 1rem;
+  }
+
+  .home-primary {
+    display: block;
+    background-color: rgb(228, 192, 125);
+  }
+
+  .home-title h4 {
+    font-size: 1.2rem;
+    padding: 1rem;
+  }
+
+  .home-title li {
+    font-size: 1rem;
+  }
+
+  .home-img {
+    display: flex;
+    justify-content: center;
+  }
+
+  .home-img img {
+    border-radius: 20% 80% 23% 77% / 82% 20% 80% 18%
+  }
+
+
+
+
   /*media query pantalla max-width: 767px*/
 @media screen and (max-width:767px) {
 
@@ -245,6 +292,48 @@
     color: aliceblue;
     background-color: black;
   } 
+
+  /*Seccion 1*/
+
+  .Home {
+    background: orange;
+    text-align: center;
+  }
+
+  .home-container {
+    padding: 1rem;
+  }
+
+  .home-container h1 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 2rem;
+    text-align: center;
+    padding: 0.5rem;
+  }
+
+  .home-container p {
+    font-size: 1rem;
+  }
+
+  .home-title h4 {
+    font-size: 1.4rem;
+    padding: 1rem;
+  }
+
+  .home-title li {
+    font-size: 1rem;
+    text-align: left;
+    margin: 0.5rem;
+  }
+
+  .home-img {
+    display: flex;
+    justify-content: center;
+  }
+
+  .home-img img {
+    border-radius: 20% 80% 23% 77% / 82% 20% 80% 18%
+  }
 }
 /*Pantallas 768px and 1023px*/
 @media screen and (min-width:768px) and (max-width:1023px){
@@ -332,6 +421,51 @@
     color: aliceblue;
     text-decoration: none;
   }
+
+
+   /*Seccion 1*/
+
+   .Home {
+    background: orange;
+    text-align: center;
+    padding: 1rem;
+  }
+
+  .home-container {
+    padding: 2rem;
+  }
+
+  .home-container h1 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 4rem;
+    text-align: center;
+    padding: 0.5rem;
+  }
+
+  .home-container p {
+    font-size: 1.5rem;
+  }
+
+  .home-title h4 {
+    font-size: 1.4rem;
+    padding: 1rem;
+  }
+
+  .home-title li {
+    font-size: 1rem;
+    text-align: left;
+    margin: 0.5rem;
+  }
+
+  .home-img {
+    display: flex;
+    justify-content: center;
+    padding: 2rem;
+  }
+
+  .home-img img {
+    border-radius: 20% 80% 23% 77% / 82% 20% 80% 18%
+  }
 }
 
   /*Pantalla 1024px*/
@@ -363,7 +497,6 @@
      display:flex;
      justify-content: center;
      align-items: center;
-     padding: 3rem;
     }
 
     .img-container{
@@ -376,7 +509,6 @@
         width: 20rem;
     }
 
-  
     .text-container h1 {
       color: black;
       text-align: center;
@@ -394,20 +526,66 @@
      display: flex;
      justify-content: center;
      gap: 1rem;
+     padding: 1.5rem;
+     text-align: center;
     }
   
     .btn {
       padding: 0.5rem;
       border-radius:30px;
       width: 18rem;
+      height: 3rem;
       color: black;
+      font-size: 1.5rem;
+      
     }
   
     .btn-btn {
       padding: 0.5rem;
       border-radius: 30px;
       width: 18rem;
+      height: 3rem;
       color: aliceblue;
       text-decoration: none;
+      font-size: 1.5rem;
     }
+
+     /*Seccion 1*/
+
+  .Home {
+    background: orange;
+    height: 100vh;
+  }
+
+  .home-container {
+    padding: 1rem;
+  }
+
+  .home-container h1 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 3rem;
+    text-align: center;
+    padding: 1rem;
+  }
+
+  .home-container p {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+
+  .home-title h4 {
+    font-size: 2rem;
+    padding: 2rem;
+    margin: 2rem;
+  }
+
+  .home-title li {
+    font-size: 1.8rem;
+    text-align: left;
+    margin: 1rem;
+  }
+
+  .home-img img {
+    border-radius: 20% 80% 23% 77% / 82% 20% 80% 18%;
+  }
 }
